<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/sharebar_dark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/league_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:contentDescription="@string/football_league"
            android:text="@string/empty" />

        <TextView
            android:id="@+id/matchday_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:contentDescription="@string/football_matchday"
            android:text="@string/empty" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableRight="@android:drawable/ic_menu_share"
            android:drawableEnd="@android:drawable/ic_menu_share"
            android:contentDescription="@string/football_share"
            android:text="@string/share_text" />

    </LinearLayout>

</LinearLayout>
