<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    style="@style/card_view_style"
    card_view:cardBackgroundColor="@color/primary"
    card_view:cardCornerRadius="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/card_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/home_crest"
                    style="@style/card_crest_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/football_home_crest" />

                <TextView
                    android:id="@+id/home_name"
                    style="@style/card_name_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/football_home_team"
                    android:text="@string/empty" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score_textview"
                    style="@style/card_score_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/football_score"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/gametime_textview"
                    style="@style/card_data_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/football_data"
                    android:text="@string/empty" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/away_crest"
                    style="@style/card_crest_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/football_away_crest" />

                <TextView
                    android:id="@+id/away_name"
                    style="@style/card_name_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/football_away_team"
                    android:text="@string/empty" />

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/detail_fragment" />

    </LinearLayout>

</android.support.v7.widget.CardView>

